styles/sider.module.less
@import './variables.module.less';

.sidebar {
  background: var(--cr-secondary-bg);
  padding: 16px 0 0 0;

  :global(.ant-layout-sider-trigger) {
    top: 0;
    bottom: unset;
    text-align: right;
    padding-right: 8px;
    height: 30px;
    width: 228px !important;
    line-height: 30px;
    background: unset;

    svg {
      height: 15px;
      width: 17px;
      fill: @cr-gray-7;
    }
  }

  &.collapsed :global(.ant-layout-sider-trigger) {
    text-align: center;
    padding-right: unset;
    width: 30px !important;
  }
}

.logo {
  text-align: center;
  margin-bottom: 5px;
}

.tabs :global(.ant-radio-button-wrapper) {
  width: 120px;
  height: 38px;
  line-height: 38px;
  text-align: center;
}

.menu {
  :global(.ant-menu-submenu-title) {
    cursor: auto;
  }

  :global(.ant-menu-submenu-arrow) {
    display: none;
  }

  :global([role=menuitem]) {
    padding-left: 12px !important;
    font-weight: bold;
    color: var(--cr-secondary-text);

    &:hover {
      color: var(--cr-secondary-text);
    }
  }

  :global(.anticon) {
    width: 22px;
    height: 22px;
    line-height: 22px;
    border-radius: 2px;

    svg {
      height: 15px;
      vertical-align: -3px;
    }
  }

  .sunsetOrange {
    background: #FFE7BA;

    svg {
      fill: #FA8C16;
    }
  }

  .polarGreen {
    background: #D9F7BE;

    svg {
      fill: #52C41A;
    }
  }

  .dustRed {
    background: #FFCCC7;

    svg {
      fill: #F5222D;
    }
  }

  .geekBlue {
    background: #D6E4FF;

    svg {
      fill: #2F54EB;
    }
  }

  .goldenPurple {
    background: #EFDBFF;

    svg {
      fill: #722ED1;
    }
  }

  .daybreakBlue {
    background: #BAE7FF;

    svg {
      fill: #1890FF;
    }
  }

  .gray {
    background: #F0F0F0;

    svg {
      fill: #8C8C8C;
    }
  }
}

.footer {
  position: absolute;
  bottom: 0;
  height: 46px;
  width: 100%;
  padding: 12px;
  text-align: center;

  .socials {
    a {
      width: 40px;
      height: 40px;
      display: flex;
      justify-content: center;
      align-items: center;
      border-radius: 100px;
      background-color: var(--cr-secondary-bg);

      &:hover {
        background-color: @divider-color;
      }
    }

    img {
      width: 24px;
    }

    .mediumIcon {
      fill: var(--cr-primary-text);
    }
  }
}

